Implemented basic JSON output processor, refactored output processors to core module and did a little code clean-up for the mojo classes.