@@ -1,13 +1,17 @@
 package io.github.belgif.rest.guide.validator.maven.plugin;
 
-import io.github.belgif.rest.guide.validator.output.OutputGroupBy;
-import io.github.belgif.rest.guide.validator.output.OutputProcessor;
+import io.github.belgif.rest.guide.validator.OpenApiValidator;
+import io.github.belgif.rest.guide.validator.output.*;
 import org.apache.maven.plugin.AbstractMojo;
+import org.apache.maven.plugin.MojoFailureException;
 import org.apache.maven.plugins.annotations.Parameter;
 
 import java.io.File;
 import java.io.FileNotFoundException;
+import java.io.IOException;
+import java.nio.file.Files;
 import java.util.*;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
 
 public abstract class AbstractValidatorMojo extends AbstractMojo {
@@ -21,6 +25,12 @@ public abstract class AbstractValidatorMojo extends AbstractMojo {
 
     @Parameter(property = "rest-guide-validator.groupBy", defaultValue = "rule")
     protected String groupBy = "rule";
+
+    @Parameter(property = "rest-guide-validator.outputTypes")
+    List<OutputType> outputTypes;
+
+    @Parameter(property = "rest-guide-validator.outputDir", defaultValue = "target")
+    File outputDir;
 
     /**
      * @deprecated fileWithExclusions parameter is ignored, please use x-ignore-rules in the OpenApi file or excludedFiles in the POM to exclude complete files.
@@ -46,7 +56,7 @@ public abstract class AbstractValidatorMojo extends AbstractMojo {
     }
 
     private List<File> getJsonAndYamlFiles(List<File> fileList) {
-        return fileList.stream().filter(file -> file.getName().endsWith(".yml") || file.getName().endsWith(".yaml") || file.getName().endsWith(".json")).collect(Collectors.toList());
+        return fileList.stream().filter(file -> file.getName().endsWith(".yml") || file.getName().endsWith(".yaml") || file.getName().endsWith(".json")).toList();
     }
 
     protected void init() throws FileNotFoundException {
@@ -55,7 +65,59 @@ public abstract class AbstractValidatorMojo extends AbstractMojo {
         initFiles();
     }
 
-    protected abstract void initOutputProcessor();
+    protected void executeRules(AtomicBoolean isValid) throws MojoFailureException {
+        try {
+            init();
+        } catch (FileNotFoundException e) {
+            throw new MojoFailureException(e.getMessage());
+        }
+
+        filesToProcess.forEach(file -> isValid.set(OpenApiValidator.isOasValid(file, excludedFiles, outputProcessors.toArray(new OutputProcessor[0])) && isValid.get()));
+        if (filesToProcess.isEmpty()) {
+            isValid.set(false);
+        }
+    }
+
+    /**
+     * Add a Console ConsoleOutputProcessor if outputTypes is empty.
+     * Instances Processors regarding the outputTypes.
+     */
+    protected void initOutputProcessor() {
+        if (outputTypes == null || outputTypes.isEmpty())
+            outputProcessors = Set.of(new ConsoleOutputProcessor(outputGroupBy));
+        else {
+            try {
+                Files.createDirectories(outputDir.toPath());
+            } catch (IOException e) {
+                getLog().error(outputDir + " directory doesn't exist and cannot be created!", e);
+            }
+
+            outputProcessors = new HashSet<>();
+            outputTypes.forEach(outputType -> {
+                switch (outputType) {
+                    case NONE:
+                        break;
+                    case JUNIT:
+                        outputProcessors.add(new JUnitOutputProcessor(outputGroupBy));
+                        break;
+                    case LOG4J:
+                        outputProcessors.add(new Log4JOutputProcessor(outputGroupBy));
+                        break;
+                    case JSON:
+                        outputProcessors.add(new JsonOutputProcessor(outputGroupBy));
+                        break;
+                    default:
+                        outputProcessors.add(new ConsoleOutputProcessor(outputGroupBy));
+                }
+            });
+            outputProcessors.stream().filter(DirectoryOutputProcessor.class::isInstance)
+                    .map(o -> (DirectoryOutputProcessor) o)
+                    .forEach(processor -> {
+                        processor.setOutput(outputDir);
+                        ((OutputProcessor) processor).setOutputGroupBy(outputGroupBy);
+                    });
+        }
+    }
 
     /**
      * Throw an IllegalArgumentException if no file is provided or if a file is not in the maven project.
@@ -71,8 +133,8 @@ public abstract class AbstractValidatorMojo extends AbstractMojo {
 
         // replace directories in list by the json and yaml files in them
         var dirs = files.stream().filter(File::isDirectory).collect(Collectors.toSet());
-        var filesFromDirs = dirs.stream().flatMap(dir -> getJsonAndYamlFiles(dir).stream()).collect(Collectors.toList());
-        var filesInRootFolder = files.stream().filter(File::isFile).filter(file -> file.getName().endsWith(".yml") || file.getName().endsWith(".yaml") || file.getName().endsWith(".json")).collect(Collectors.toList());
+        var filesFromDirs = dirs.stream().flatMap(dir -> getJsonAndYamlFiles(dir).stream()).toList();
+        var filesInRootFolder = files.stream().filter(File::isFile).filter(file -> file.getName().endsWith(".yml") || file.getName().endsWith(".yaml") || file.getName().endsWith(".json")).toList();
 
         filesToProcess.addAll(filesInRootFolder);
         filesToProcess.addAll(filesFromDirs);
